fixing navbar mobile on safari 9

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,6 +344,7 @@ h6 {
   bottom: 0;
   background: rgba(0, 0, 0, 0.9);
   transition: 0.3s;
+  -webkit-transform: translate3d(0, 0, 0);
   z-index: 999;
   margin-top: 0;
 }
@@ -405,7 +406,6 @@ section.section-show {
 section .container {
   background: rgba(0, 0, 0, 0.9);
   padding: 30px;
-  z-index: 3;
 }
 
 @media (max-width: 768px) {
